Pushing changes. Added modal to creation page, actor schema made and db populated with actors and events

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,29 +1,10 @@
 <body>
-<!--
-For enabling facebook plugin stuff
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '204404756604994',
-      xfbml      : true,
-      version    : 'v2.5'
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
--->
-
   <section ng-controller="HomeController">
     <style>
       body {
-        background-image: url('modules/core/client/img/brand/nebula.jpg');
+        background-image: url('modules/core/client/img/brand/city.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
       }
     </style>
     <div>
