--- a/modules/queries/client/views/list-queries.client.view.html
+++ b/modules/queries/client/views/list-queries.client.view.html
@@ -3,15 +3,15 @@
     <h1>Queries</h1>
   </div>
   <div class="list-group">
-    <a ng-repeat="querie in queries" ui-sref="queries.view({querieId: querie._id})" class="list-group-item">
+    <a ng-repeat="query in queries" ui-sref="queries.view({queryId: query._id})" class="list-group-item">
       <small class="list-group-item-text">
         Asked on
-        <span ng-bind="querie.created | date:'mediumDate'"></span>
+        <span ng-bind="query.created | date:'mediumDate'"></span>
         by
-        <span ng-bind="querie.user.displayName"></span>
+        <span ng-bind="query.user.displayName"></span>
       </small>
-      <h4 class="list-group-item-heading" ng-bind="querie.title"></h4>
-      <p class="list-group-item-text" ng-bind="querie.content"></p>
+      <h4 class="list-group-item-heading" ng-bind="query.title"></h4>
+      <p class="list-group-item-text" ng-bind="query.content"></p>
     </a>
   </div>
   <div class="alert alert-warning text-center" ng-if="queries.$resolved && !queries.length">
