--- a/modules/queries/client/views/create-query.client.view.html
+++ b/modules/queries/client/views/create-query.client.view.html
@@ -1,73 +1,233 @@
-<section ng-controller="QueriesController" ng-init="find(); findActors()">
+<section ng-controller="QueriesController" ng-init="find(); findActors(); findEvents()">
   <div class="page-header">
     <h1>New Query</h1>
   </div>
   <div class="col-md-12">
     <form name="queryForm" class="form-horizontal" ng-submit="create(queryForm.$valid)" novalidate>
       <fieldset>
+
+        <h2>Actor 1</h2>
+        <!--Country Actor 1-->
         <div class="row">
           <div class="col-md-10">
-            <input readonly name="country_actor1" type="text" ng-model="queryArgs.country_actor1.name" id="country_actor1" class="form-control actor1" placeholder="Actor 1" required>
-            <div ng-messages="queryForm.title.$error" role="alert">
-              <p class="help-block error-text" ng-message="required">At least 1 Country Actor is required!</p>
-            </div>
+            <input readonly name="country_actor1" type="text" ng-model="queryArgs.country_actor1.name" id="country_actor1" class="form-control actor1" placeholder="Actor 1 Country">
           </div>
           <div class="col-md-2">
-            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#countryModal">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
           </div>
         </div>
 
-        <div id="myModal" class="modal fade" role="dialog">
+        <div id="countryModal" class="modal fade" role="dialog">
           <div class="modal-dialog">
 
             <!-- Modal content-->
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Select Actor</h4>
+                <h4 class="modal-title">Select Actor Country/Region</h4>
               </div>
               <div class="modal-body">
                 <div class="table-scrolling">
                   <table ng-show="true" class="table table-striped table-hover">
-                    <tr style="cursor: pointer;" ng-repeat="actor in actors | filter: { type: 'country' }" ng-click="confirmActor(actors.indexOf(actor));">
+                    <tr style="cursor: pointer;" ng-repeat="actor in actors | filter: { type: 'country' }" ng-click="confirmActor(actors.indexOf(actor), 'country');">
                       <td>{{actor.name}}</td>
                     </tr>
                   </table>
                 </div>
               </div>
               <div class="modal-footer">
-                <span>Your Ingredient Is: {{queryArgs.country_actor1.name}}</span>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Okay!</button>
+                <span>Your Selected Actor Country Is: {{queryArgs.country_actor1.name}}</span>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
               </div>
             </div>
           </div>
         </div>
 
         <br>
+
+        <!--Type Actor 1-->
         <div class="row">
           <div class="col-md-10">
-            <input readonly name="actor2" type="text" ng-model="actor2" id="actor2" class="form-control actor2" placeholder="Actor 2" required>
+            <input readonly name="type_actor1" type="text" ng-model="queryArgs.type_actor1.name" id="type_actor1" class="form-control actor1" placeholder="Actor 1 Type">
           </div>
           <div class="col-md-2">
-            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#typeModal">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
           </div>
         </div>
+
+        <div id="typeModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Select Actor Type</h4>
+              </div>
+              <div class="modal-body">
+                <div class="table-scrolling">
+                  <table ng-show="true" class="table table-striped table-hover">
+                    <tr style="cursor: pointer;" ng-repeat="actor in actors | filter: { type: 'type' }" ng-click="confirmActor(actors.indexOf(actor), 'type');">
+                      <td>{{actor.name}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <br>
+
+        <!--Actor 1 Ethnic-->
         <div class="row">
           <div class="col-md-10">
-            <input readonly name="event" ng-model="event" id="event" class="form-control event" placeholder="Event">
+            <input readonly name="ethnic_actor1" type="text" ng-model="queryArgs.ethnic_actor1.name" id="ethnic_actor1" class="form-control actor1" placeholder="Actor 1 Ethnicity">
           </div>
           <div class="col-md-2">
-            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findEvents();" >
+            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ethnicModal">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
           </div>
         </div>
+
+        <div id="ethnicModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Select Actor Ethnicity</h4>
+              </div>
+              <div class="modal-body">
+                <div class="table-scrolling">
+                  <table ng-show="true" class="table table-striped table-hover">
+                    <tr style="cursor: pointer;" ng-repeat="actor in actors | filter: { type: 'ethnic' }" ng-click="confirmActor(actors.indexOf(actor), 'ethnic');">
+                      <td>{{actor.name}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <br>
+
+        <!--Actor 1 Religion-->
+        <div class="row">
+          <div class="col-md-10">
+            <input readonly name="religion_actor1" type="text" ng-model="queryArgs.religion_actor1.name" id="religion_actor1" class="form-control actor1" placeholder="Actor 1 Religion">
+          </div>
+          <div class="col-md-2">
+            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#religionModal">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </div>
+        </div>
+
+        <div id="religionModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Select Actor Religion</h4>
+              </div>
+              <div class="modal-body">
+                <div class="table-scrolling">
+                  <table ng-show="true" class="table table-striped table-hover">
+                    <tr style="cursor: pointer;" ng-repeat="actor in actors | filter: { type: 'religion' }" ng-click="confirmActor(actors.indexOf(actor), 'religion');">
+                      <td>{{actor.name}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <br>
+
+        <!--Actor 1 KnownGroup-->
+        <div class="row">
+          <div class="col-md-10">
+            <input readonly name="knowngroup_actor1" type="text" ng-model="queryArgs.knowngroup_actor1.name" id="knowngroup_actor1" class="form-control actor1" placeholder="Actor 1 Known Group">
+          </div>
+          <div class="col-md-2">
+            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#knowngroupModal">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </div>
+        </div>
+
+        <div id="knowngroupModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Select Actor Known Group</h4>
+              </div>
+              <div class="modal-body">
+                <div class="table-scrolling">
+                  <table ng-show="true" class="table table-striped table-hover">
+                    <tr style="cursor: pointer;" ng-repeat="actor in actors | filter: { type: 'knowngroup' }" ng-click="confirmActor(actors.indexOf(actor), 'knowngroup');">
+                      <td>{{actor.name}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <br>
+        <h2>Event</h2>
+
+        <!--Event-->
+        <div class="row">
+          <div class="col-md-10">
+            <input readonly name="event" type="text" ng-model="queryArgs.event.name" id="event" class="form-control actor1" placeholder="Event">
+          </div>
+          <div class="col-md-2">
+            <button style="margin-left: -30px;" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#eventModal">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </div>
+        </div>
+
+        <div id="eventModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Select Event</h4>
+              </div>
+              <div class="modal-body">
+                <div class="table-scrolling">
+                  <table ng-show="true" class="table table-striped table-hover">
+                    <tr style="cursor: pointer;" ng-repeat="event in events" ng-click="confirmEvent(events.indexOf(event));">
+                      <td>{{event.name}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <br>
+
       <div class="form-group col-md-3">
         <input type="submit" class="btn btn-primary btn-lg">
       </div>
