--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -35,3 +35,13 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+
+.select {
+  min-height: 50px;
+  font-size: 40px;
+}
+
+.select option {
+  min-height: 50px;
+  font-size: 40px;
+}
