--- a/modules/queries/client/views/create-query.client.view.html
+++ b/modules/queries/client/views/create-query.client.view.html
@@ -218,7 +218,7 @@
               <div class="table-scrolling">
                 <table ng-show="true" class="table table-striped table-hover">
                   <tr style="cursor: pointer;" ng-repeat="event in events" ng-click="confirmEvent(events.indexOf(event));">
-                    <td>{{event_object.name}}</td>
+                    <td>{{event.name}}</td>
                   </tr>
                 </table>
               </div>
