Graphs working better now with purchase

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -17,7 +17,7 @@
       <div class="col-md-12 text-center">
         <div class="btn-group">
           <p>
-            <a class="btn btn-primary btn-lg" href="http://gdeltproject.org/" target="_blank">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="http://gdeltproject.org/data.html" target="_blank">Learn more</a>
             <a class="btn btn-primary btn-lg" ui-sref="queries.create">Make a Query</a>
           </p>
         </div>
