--- a/modules/queries/client/views/list-queries.client.view.html
+++ b/modules/queries/client/views/list-queries.client.view.html
@@ -1,10 +1,17 @@
 <section ng-controller="QueriesController" ng-init="find()">
-  <table ng-repeat="query in queries" ui-sref="queries.view({queryId: query._id})">
-    <tr>
-      <th>Event</th>
-    </tr>
-    <tr>
-      <th>{{query.event_object.name}}</th>
-    </tr>
-  </table>
+  <h1 style="text-align: center;">All Queries</h1>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="tableWrapper panel panel-body">
+        <table class="table table-striped table-hover">
+          <tr>
+            <th>Query</th>
+          </tr>
+          <tr ng-repeat="query in queries">
+            <td ui-sref="queries.view({queryId: query._id})">{{query.built_query}}</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
 </section>
