Holy crap everything works

--- a/modules/queries/client/views/create-query.client.view.html
+++ b/modules/queries/client/views/create-query.client.view.html
@@ -236,17 +236,17 @@
       <h4>Start Date</h4>
       <div class="row">
         <div class="col-md-10">
-          <select ng-model="start_day" id="selectStartDay" size="1" style="width:auto;"></select>
-          <select ng-model="start_month" id="selectStartMonth" size ="1" style="width:auto;"></select>
-          <select ng-model="start_year" id="selectStartYear" size = "1" style="width:auto;"></select>
+          <select ng-model="queryArgs.start_day" id="selectStartDay" size="1" style="width:auto;"></select>
+          <select ng-model="queryArgs.start_month" id="selectStartMonth" size ="1" style="width:auto;"></select>
+          <select ng-model="queryArgs.start_year" id="selectStartYear" size = "1" style="width:auto;"></select>
         </div>
       </div>
       <h4>End Date</h4>
       <div class="row">
         <div class="col-md-10">
-          <select ng-model="end_day" id="selectEndDay" size="1" style="width:auto;"></select>
-          <select ng-model="end_month" id="selectEndMonth" size ="1" style="width:auto;"></select>
-          <select ng-model="end_year" id="selectEndYear" size = "1" style="width:auto;"></select>
+          <select ng-model="queryArgs.end_day" id="selectEndDay" size="1" style="width:auto;"></select>
+          <select ng-model="queryArgs.end_month" id="selectEndMonth" size ="1" style="width:auto;"></select>
+          <select ng-model="queryArgs.end_year" id="selectEndYear" size = "1" style="width:auto;"></select>
         </div>
       </div>
       <h4>Time Intervals</h4>
