--- a/modules/queries/client/views/view-query.client.view.html
+++ b/modules/queries/client/views/view-query.client.view.html
@@ -56,11 +56,11 @@
     </div>
 
     
-    <div class="col-md-12">
+    <!-- <div class="col-md-12">
     <h1>3D Plot</h1>
     <a href="https://plot.ly/~matthewlv30/10" target="_blank" title="y" style="display: block; text-align: center;"><img src="https://plot.ly/~matthewlv30/10.png" alt="y" style="max-width: 100%;width: 500px;"  width="500" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="matthewlv30:10"  src="https://plot.ly/embed.js" async></script>
-    </div>
+    </div> -->
 
     <!-- <iframe width='100%' height='520' frameborder='0' src='https://gdelt.cartodb.com/viz/dba8d716-f804-11e4-b9c4-0e853d047bba/embed_map' allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> -->
   <div class="col-md-12">
